src/main/java/com/example/backend/domain/errors/InvalidCredentialsException.java
package com.example.backend.domain.errors;

public class InvalidCredentialsException extends RuntimeException {

  public InvalidCredentialsException() {
    super("Invalid Credentials");
  }
}